# moonlight-web-stream

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: linux.yml  windows.yml
discord-cloud-gaming/: README.md  modal_app.py
discord-cloud-gaming/config/: sunshine.conf  supervisord.conf  xorg.conf
discord-cloud-gaming/scripts/: start-services.sh
moonlight-web/common/src/: api_bindings.rs  config.rs  ipc.rs
moonlight-web/streamer/src/: audio.rs  main.rs  peer_manager.rs  video.rs
moonlight-web/web-server/: Cargo.toml  package.json  tsconfig.json
moonlight-web/web-server/src/: main.rs  room.rs
moonlight-web/web-server/src/api/: discord.rs  mod.rs  stream.rs
moonlight-web/web-server/src/app/: host.rs  mod.rs
moonlight-web/web-server/web/: api.ts  discord-activity.html  discord-activity.ts  join.html  join.ts  stream.ts
moonlight-web/web-server/web/libopus/: index.ts  libopus.d.ts  libopus.js  libopus.wasm
moonlight-web/web-server/web/stream/: guest.ts  index.ts
moonlight-web/web-server/web/stream/audio/: audio_buffer_pipe.ts  audio_context_base.ts  audio_context_destination.ts  audio_context_track_pipe.ts  audio_decoder_pcm_pipe.ts  audio_decoder_pipe.ts  index.ts  pipeline.ts
moonlight-web/web-server/web/stream/pipeline/: index.ts  worker_pipe.ts
