[package]
name = "web-server"
version.workspace = true
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common = { workspace = true, features = ["high"] }
common = { path = "../common" }

tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }

clap = { workspace = true, features = ["derive", "env"] }

actix-web = { workspace = true, features = ["openssl"] }
openssl = { workspace = true }
actix-files = { workspace = true }
actix-ws = { workspace = true }

log = { workspace = true }
simplelog = { workspace = true }

anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
pem = { workspace = true }

async-stream = { workspace = true }
futures = { workspace = true }
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
hex.workspace = true
rand.workspace = true

[lints]
workspace = true
